improved build files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,15 @@ endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libwebp ${CMAKE_CURRENT_SOURCE_DIR}/libwebp/build)
 
-project(libwebp C)
+project(libwebp)
 
 set(
-  LIBWEP_EXPORTED_FUNCTIONS "_WebPFree,_WebPMalloc,_wpEncode,_wpGetEncoderVersion,_wpDecode,_wpGetDecoderVersion,_wpGetHeight,_wpGetWidth,_malloc,_free" 
+  LIBWEP_EXPORTED_FUNCTIONS "_WebPFree,_WebPMalloc,_wpRescale,_wpEncode,_wpGetEncoderVersion,_wpDecode,_wpGetDecoderVersion,_wpGetHeight,_wpGetWidth,_malloc,_free" 
 )
 
-add_executable(libwebp src/webp_encoder.c src/webp_decoder.c)
+add_executable(libwebp src/webp_wrapper.cpp)
 target_link_libraries(libwebp webp)
 target_include_directories(libwebp PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
-target_include_directories(libwebp PUBLIC  include)
 target_compile_definitions(libwebp PUBLIC EMSCRIPTEN)
 
 set_target_properties(
@@ -27,6 +26,7 @@ set_target_properties(
     PROPERTIES LINK_FLAGS "-sWASM=1 \
        -sTOTAL_MEMORY=1024MB \
        -sEXPORTED_FUNCTIONS=${LIBWEP_EXPORTED_FUNCTIONS} -sINVOKE_RUN=0 \
+       -sMODULARIZE=1 -sEXPORT_NAME=LIBWEBP \
        -sEXPORTED_RUNTIME_METHODS=cwrap,getValue")
 set_target_properties(libwebp PROPERTIES OUTPUT_NAME libwebp)
 
